@@ -1,5 +1,10 @@
 2005-03-14  Mark McLoughlin  <mark@skynet.ie>
 
+	* acinclude.m4: remove - we don't use anything from
+	it anymore. Fixes bug #153049
+
+2005-03-14  Mark McLoughlin  <mark@skynet.ie>
+
 	* configure.in: bump version to 2.11.1 after branching.
 
 2005-03-07  Mark McLoughlin  <mark@skynet.ie>
